RESOLVED FIXED 47408
Pages using DeviceOrientation and DeviceMotion should not go into the page cache
https://bugs.webkit.org/show_bug.cgi?id=47408
Summary Pages using DeviceOrientation and DeviceMotion should not go into the page cache
Steve Block
Reported 2010-10-08 04:14:08 PDT
The controllers for DeviceOrientation and DeviceMotion stop the client when all listeners are removed. We want the client to be stopped as soon as the page is navigated away, but listeners are not removed if the page goes into the page cache. Therefore, we should prevent documents using DeviceOrientation and DeviceMotion from entering the page cache.
Attachments
Patch (13.23 KB, patch)
2010-10-08 04:17 PDT, Steve Block
no flags
Steve Block
Comment 1 2010-10-08 04:17:55 PDT
Alexey Proskuryakov
Comment 2 2010-10-08 11:23:39 PDT
Long term, we want such pages to stay in page cache, right?
Steve Block
Comment 3 2010-10-08 11:40:04 PDT
> Long term, we want such pages to stay in page cache, right? Yes, that's probably true.
Steve Block
Comment 4 2010-10-12 00:43:38 PDT
Alexey, would you be able to review?
Alexey Proskuryakov
Comment 5 2010-10-12 14:16:51 PDT
Comment on attachment 70225 [details] Patch Loks sane, except for the part where test code is in a separate .js file.
WebKit Commit Bot
Comment 6 2010-10-13 03:00:46 PDT
Comment on attachment 70225 [details] Patch Clearing flags on attachment: 70225 Committed r69646: <http://trac.webkit.org/changeset/69646>
WebKit Commit Bot
Comment 7 2010-10-13 03:00:53 PDT
All reviewed patches have been landed. Closing bug.
mitz
Comment 8 2010-10-13 08:17:27 PDT
(In reply to comment #3) > > Long term, we want such pages to stay in page cache, right? > Yes, that's probably true. Has a bug been filed to track this?
Steve Block
Comment 9 2010-10-14 07:16:27 PDT
> Has a bug been filed to track this? Filed Bug 47670
Note You need to log in before you can comment on or make changes to this bug.