2010-10-13  Steve Block  <steveblock@google.com>

Reviewed by Alexey Proskuryakov.

        Pages using DeviceOrientation and DeviceMotion should not go into the page cache
        https://bugs.webkit.org/show_bug.cgi?id=47408

        * fast/dom/DeviceMotion/no-page-cache-expected.txt: Added.
        * fast/dom/DeviceMotion/no-page-cache.html: Added.
        * fast/dom/DeviceMotion/resources: Added.
        * fast/dom/DeviceMotion/resources/cached-page-1.html: Added.
        * fast/dom/DeviceMotion/resources/cached-page-2.html: Added.
        * fast/dom/DeviceMotion/script-tests/no-page-cache.js: Added.
        (reportPageOneOnload):
        * fast/dom/DeviceOrientation/no-page-cache-expected.txt: Added.
        * fast/dom/DeviceOrientation/no-page-cache.html: Added.
        * fast/dom/DeviceOrientation/resources: Added.
        * fast/dom/DeviceOrientation/resources/cached-page-1.html: Added.
        * fast/dom/DeviceOrientation/resources/cached-page-2.html: Added.
        * fast/dom/DeviceOrientation/script-tests/no-page-cache.js: Added.
        (reportPageOneOnload):
2010-10-13  Steve Block  <steveblock@google.com>

        Reviewed by Alexey Proskuryakov.

        Pages using DeviceOrientation and DeviceMotion should not go into the page cache
        https://bugs.webkit.org/show_bug.cgi?id=47408

        Tests: fast/dom/DeviceMotion/no-page-cache.html
               fast/dom/DeviceOrientation/no-page-cache.html

        * dom/DeviceMotionController.h:
        (WebCore::DeviceMotionController::isActive):
        * dom/DeviceOrientationController.h:
        (WebCore::DeviceOrientationController::isActive):
        * history/PageCache.cpp:
        (WebCore::logCanCachePageDecision):
        (WebCore::PageCache::canCache):
        * page/Page.cpp:

Canonical link: https://commits.webkit.org/60239@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@69646 268f45cc-cd09-0410-ab3c-d52691b4dbfc