WebCore/dom/DeviceMotionController.h
@@ -46,6 +46,8 @@ public:
 
     void didChangeDeviceMotion(DeviceMotionData*);
 
+    bool isActive() { return !m_listeners.isEmpty(); }
+
 private:
     void timerFired(Timer<DeviceMotionController>*);
     
